# random_sampling

./: .gitignore  CMakeLists.txt  README.md  analysis.ipynb
jupyter/: analysis.ipynb  integer_mapping.ipynb  reservoir.ipynb  sampling_without_replacement.ipynb  scaling_functions.ipynb
jupyter/to_sort/: lemire_range.ipynb
src/: hidden_shuffle.f90  random_python.py  test.f90  xorshifts.f90
src/cpp/: lemire_mapping.cpp
src/fortran/: CMakeLists.txt  fisher_yates.f90  hidden_shuffle.f90  integer_mapping.f90  reservoir_sampling.f90  test_integer_mapping.f90  test_xor.f90  xorshifts.f90
src/fortran/tests/: test_integer_mapping.f90  test_lemire_routines.f90  test_reservoir_sampling.f90  test_xorshifts.f90
